update background and footer

--- a/about/index.html
+++ b/about/index.html
@@ -42,4 +42,4 @@
 
 &#183; <a href="/about/about_me">About Me</a>
 
-&#183; <a href="https://emilyhesketh.github.io">main</a></p></div><div class="section footer">Emily Hesketh. 2018.</div></div></body>
+&#183; <a href="https://emilyhesketh.github.io">Home</a></p></div><div class="section footer">Emily Hesketh 2018.</div></div></body>
