--- a/index.html
+++ b/index.html
@@ -80,12 +80,17 @@ img {vertical-align: middle;}
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
+.text a {
+  border-style: none;
+}
 
  
 .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
+  background-color: #000;
+  opacity: 0.7;
   position: absolute;
   bottom: 8px;
   width: 100%;
@@ -132,7 +137,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text">One</div>
+  <div class="text"><a href="/projects/my-first-project">One</a></div>
 </div>
 
 <div class="mySlides fade">
