--- a/about/about_me/index.html
+++ b/about/about_me/index.html
@@ -36,9 +36,10 @@
 </head>
 
 </html>
-<body><div class="wrap"><div class="section" id="title">About: Me</div><div class="section" id="content">
-
-<h1 id="my-name-is-emily-call-me-milly-hesketh-i-am-due-to-graduate-in-2018-from-ba-interior-design">My name is Emily (Call me Milly) Hesketh. I am due to graduate in 2018 from BA Interior Design.</h1>
+<body><div class="wrap"><div class="section" id="title">About: Me</div><div class="section" id="content"><p>My name is Emily Hesketh, I am also known as Milly. I will be graduating in 2018 with a degree in BA (Hons) Interior Design from Birmingham City University.
+I have thoroughly enjoyed my time study at university, and during the three years I have worked on numerous projects, across different design sectors, including live projects. A variety of my work can be found on this website, showing a range of design communication skills I have acquired.
+I hope you enjoy viewing my work.
+<img src="/milly.jpg" alt="Final Board" title="Portrait" /></p>
 </div><div class="section bottom-menu"><hr/><p><a href="/projects">Projects</a>
 
 
