--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ img {vertical-align: middle;}
  
 .slideshow-container {
   margin-top: 100px;
-  max-width: 1000px;
+  max-width: 900px;
   position: relative;
   margin: auto;
 }
@@ -136,18 +136,23 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text"><a href="/projects/my-first-project">One</a></div>
+  <img src="1.jpg" style="width:100%">
+  <div class="text"><a href="/projects/airworthy">Airworthy</a></div>
 </div>
 
 <div class="mySlides fade">
-  <img src="img_fjords_wide.jpg" style="width:100%">
-  <div class="text">Two</div>
+  <img src="2.jpg" style="width:100%">
+  <div class="text"><a href="/projects/airworthy">Airworthy</a></div>
 </div>
 
 <div class="mySlides fade">
-  <img src="img_mountains_wide.jpg" style="width:100%">
-  <div class="text">Three</div>
+  <img src="3.jpg" style="width:100%">
+  <div class="text"><a href="/projects/airworthy">Airworthy</a></div>
+</div>
+
+<div class="mySlides fade">
+  <img src="4.jpg" style="width:100%">
+  <div class="text"><a href="/projects/airworthy">Airworthy</a></div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
