--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
 
 </html>
 <body><div class="wrap"><div class="section" id="content"><h1>Projects</h1><p></p><li>
-<a href="https://emilyhesketh.github.io/projects/my-first-project/">My First Project</a></li></div><div class="section bottom-menu"><hr/><p><a href="/projects">Projects</a>
+<a href="https://emilyhesketh.github.io/projects/airworthy/">Airworthy</a></li></div><div class="section bottom-menu"><hr/><p><a href="/projects">Projects</a>
 
 
 &#183; <a href="/about/about_me">About Me</a>
